# overseer

./: .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  USAGE.md  pyproject.toml  witty-orbiting-zebra.md
.claude/agents/: drift-detector.md  mcp-server-architect.md  task-schema-designer.md
src/overseer/: __init__.py  cli.py  server.py
src/overseer/drift/: __init__.py  detector.py
src/overseer/jira/: __init__.py  client.py  models.py
src/overseer/models/: __init__.py  config.py  session.py  task.py
src/overseer/store/: __init__.py  json_store.py  session_store.py
src/overseer/web/: __init__.py  app.py
src/overseer/web/static/css/: styles.css
src/overseer/web/templates/: base.html  index.html
src/overseer/web/templates/components/: kanban.html  list.html  task_card.html  task_form.html  task_row.html
tests/: __init__.py  test_drift.py  test_drift_jira.py  test_jira_client.py  test_jira_models.py  test_json_store.py  test_models.py  test_web.py
