[project]
name = "overseer"
version = "0.1.0"
description = "The Invisible Project Manager - local-first task management for AI-assisted development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[project.scripts]
overseer = "overseer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overseer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
